# gmpfrxx_mkII

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.1.0.0.md  CHANGES.1.0.1.md  CMakeLists.txt  LICENSE  PRECISION.md  PROMPTS.md  README.md  SPECIFICATIONS.md  STATUS.md  gmpfrxx_mkII.h  test_compound.cpp  test_construction.cpp  test_precision.cpp
benchmarks/: CMakeLists.txt  README.md  README_TEMPLATE.md  bench_gmp_arithmetic.cpp  bench_mpfr_mpc_arithmetic.cpp  check_disasm_equivalence.py  plot_rgemm_backend_comparison.py  plot_rgemm_kernel_comparison.py  run_all.sh  run_benchmarks.sh  run_rgemm_all.sh  run_rgemm_pow2_37.sh
benchmarks/00_Rdot/: Rdot_gmp_C_native_openmp_01.cpp  Rdot_gmp_kernel_01.cpp  Rdot_gmp_kernel_02.cpp  Rdot_gmp_kernel_04.cpp
benchmarks/01_Raxpy/: Raxpy_gmp_C_native_openmp_01.cpp  Raxpy_gmp_kernel_01.cpp  Raxpy_gmp_kernel_02.cpp  Raxpy_gmp_kernel_openmp_01.cpp  Raxpy_gmp_kernel_openmp_02.cpp
benchmarks/02_Rgemv/: Rgemv_gmp_kernel_02.cpp  Rgemv_gmp_kernel_openmp_01.cpp
benchmarks/03_Rgemm/: Rgemm_gmp_C_native_01.cpp  Rgemm_gmp_C_native_02.cpp  Rgemm_gmp_C_native_openmp_02.cpp  Rgemm_gmp_kernel_01.cpp  Rgemm_gmp_kernel_02.cpp  Rgemm_gmp_kernel_openmp_01.cpp  Rgemm_gmp_kernel_openmp_02.cpp  Rgemm_gmp_kernel_openmp_03.cpp
benchmarks/common/: benchmark_allocator_counter.hpp  mpf_init_counter.hpp  mpf_operation_counter.hpp  mpfr_operation_counter.hpp  plot.py  run_benchmarks.sh  run_mpfr_benchmarks.sh  run_stream_like.sh  stream_like_omp.cpp
benchmarks/gmp/00_Rdot/: README.md  Rdot_common.hpp  Rdot_gmp_C_native_01.cpp  Rdot_gmp_C_native_02.cpp  Rdot_gmp_C_native_03.cpp  Rdot_gmp_C_native_04.cpp  Rdot_gmp_C_native_05.cpp  Rdot_gmp_C_native_06.cpp  Rdot_gmp_C_native_07_readonly.cpp  Rdot_gmp_C_native_08_addonly.cpp  Rdot_gmp_C_native_09_mulonly.cpp  Rdot_gmp_C_native_10_muladd.cpp  Rdot_gmp_C_native_microbench.cpp  Rdot_gmp_C_native_openmp_01.cpp  Rdot_gmp_C_native_openmp_02.cpp  Rdot_gmp_C_native_openmp_03.cpp  Rdot_gmp_C_native_openmp_04.cpp  Rdot_gmp_C_native_openmp_05.cpp  Rdot_gmp_C_native_openmp_06.cpp  Rdot_gmp_kernel_01.cpp  Rdot_gmp_kernel_02.cpp  Rdot_gmp_kernel_03.cpp  Rdot_gmp_kernel_04.cpp  Rdot_gmp_kernel_05.cpp  Rdot_gmp_kernel_06.cpp  Rdot_gmp_kernel_openmp_01.cpp  Rdot_gmp_kernel_openmp_02.cpp  Rdot_gmp_kernel_openmp_03.cpp  Rdot_gmp_kernel_openmp_04.cpp  Rdot_gmp_kernel_openmp_05.cpp  Rdot_gmp_kernel_openmp_06.cpp  Rdot_microbench_common.hpp  go.sh  plot.py  plot_repeat_summary.py  run_repeat.sh
benchmarks/gmp/01_Raxpy/: README.md  Raxpy_common.hpp  Raxpy_gmp_C_native_01.cpp  Raxpy_gmp_C_native_02.cpp  Raxpy_gmp_C_native_04.cpp  Raxpy_gmp_C_native_openmp_01.cpp  Raxpy_gmp_C_native_openmp_02.cpp  Raxpy_gmp_C_native_openmp_03.cpp  Raxpy_gmp_C_native_openmp_04.cpp  Raxpy_gmp_kernel_01.cpp  Raxpy_gmp_kernel_02.cpp  Raxpy_gmp_kernel_03.cpp  Raxpy_gmp_kernel_04.cpp  Raxpy_gmp_kernel_openmp_01.cpp  Raxpy_gmp_kernel_openmp_02.cpp  Raxpy_gmp_kernel_openmp_03.cpp  Raxpy_gmp_kernel_openmp_04.cpp  go.sh  plot.py  plot_repeat_summary.py  run_repeat.sh
benchmarks/gmp/02_Rgemv/: README.md  Rgemv_common.hpp  Rgemv_gmp_C_native_01.cpp  Rgemv_gmp_C_native_02.cpp  Rgemv_gmp_C_native_03.cpp  Rgemv_gmp_C_native_04.cpp  Rgemv_gmp_C_native_openmp_01.cpp  Rgemv_gmp_C_native_openmp_02.cpp  Rgemv_gmp_C_native_openmp_03.cpp  Rgemv_gmp_C_native_openmp_04.cpp  (+18 more)
benchmarks/mpfr/: README.md
benchmarks/results_raw/: rgemm_gmp_openmp_02_04_05_06_step31_core32_1024.csv  rgemm_gmp_openmp_02_04_05_06_step31_core32_512.csv  rgemm_gmp_openmp_02_04_05_06_step7_powers_core32_512.csv  rgemm_gmp_openmp_04_05_core32_512.csv
examples/: CMakeLists.txt  example01.cpp  example02_mpc.cpp  example02_mpf.cpp  example02_mpfr.cpp  example02_mpfr_mpc.cpp  example03_mpf.cpp  example03_mpfc.cpp  example03_mpfc_math.cpp  example03_mpfr.cpp  example04_mpf.cpp  example04_mpfr.cpp  example05_mpf.cpp  example05_mpfr.cpp  example06_mpc.cpp  example06_mpfc.cpp  example07_mpc.cpp  example07_mpfc.cpp  example08_mpc.cpp  example08_mpfc.cpp  example09_mpc.cpp  example09_mpfc.cpp  example10_mpf.cpp  example10_mpfr.cpp  example11_mpf.cpp  example11_mpfr.cpp  example12_mpf.cpp  example12_mpfr.cpp  example13_mpf.cpp  example13_mpfr.cpp  example14_mpf.cpp  example14_mpfr.cpp  example15_mpf.cpp  example15_mpfr.cpp  example16_mpf_thread_context.cpp  example16_mpfr_thread_context.cpp
tests/: CMakeLists.txt  compile_fail_driver.cmake  compile_pass_harness_control.cpp  expect_process_failure.cmake  test_abi_fingerprint.cpp  test_aggregator_header_smoke.cpp  test_alias_safety.cpp  test_arithmetic.cpp  test_common_type.cpp  test_comparisons.cpp  test_compound_assign.cpp  test_construction.cpp  test_construction_copy.cpp  test_env.hpp  test_et_contract_mpc.cpp  test_et_contract_mpf.cpp  test_et_contract_mpfc.cpp  test_et_contract_mpfr.cpp  test_et_contract_mpfr_scalar.cpp  test_et_contract_zq_mpf.cpp  test_et_contract_zq_mpfr.cpp  test_exception_support.cpp  test_expr_unary_move_folding.cpp  test_gmp_header_smoke.cpp  test_gmpxx_mkII.cpp  test_header_boundaries.cpp  test_integer_model_diagnostics.cpp  test_leaf_single_rounding.cpp  test_library_tls_detection.cpp  test_mixed_scalar.cpp  test_mixed_type_arithmetic.cpp  test_mixed_zq_mpf_promotion.cpp  test_mixed_zq_mpfr_exact_subexpression.cpp  test_mixed_zq_mpfr_promotion.cpp  test_mpc_aliasing.cpp  test_mpc_alloc_count.cpp  test_mpc_basic.cpp  test_mpc_defaults.cpp  test_mpc_environment.cpp  test_mpc_environment_first_use.cpp  (+83 more)
tests/compile_fail/: gmp_header_must_not_expose_mpfr_or_mpc.cpp  mpc_header_requires_mpfr_first.cpp  mpfr_header_must_not_expose_mpc.cpp  mpfr_header_must_not_expose_mpf.cpp  mpfr_header_must_not_expose_mpfc.cpp  test_bool_scalar.cpp  test_char16_scalar.cpp  test_char32_scalar.cpp  test_int128_scalar.cpp  test_long_double_scalar.cpp  test_mpc_plus_mpf.cpp  test_mpc_plus_mpfc.cpp  test_mpf_plus_mpc.cpp  test_mpf_plus_mpfr.cpp  test_mpf_precision_guard_frozen_env.cpp  test_mpfc_plus_mpc.cpp  test_mpfc_plus_mpfr.cpp  test_mpfr_plus_mpf.cpp  test_mpfr_plus_mpfc.cpp  test_scalar_scalar_et_operator.cpp  test_wchar_scalar.cpp
(+445 files in other folders)
